Kubernetes/booking-database.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-postgres-db
spec:
  selector:
    matchLabels:
      app: booking-postgres-db
  template:
    metadata:
      labels:
        app: booking-postgres-db
    spec:
      containers:
      - name: booking-postgres-db
        image: postgres:14.7-alpine
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1024Mi"
            cpu: "500m"
        ports:
        - containerPort: 5432
        volumeMounts:
          - name: booking-postgres-db-persistent-storage
            mountPath: /var/lib/postgresql/data
      volumes:
        - name: booking-postgres-db-persistent-storage
          persistentVolumeClaim:
            claimName: booking-postgres-db-pvc
