Kubernetes/booking-workloads.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-mw
spec:
  selector:
    matchLabels:
      app: booking-mw
  template:
    metadata:
      labels:
        app: booking-mw
    spec:
      containers:
      - name: booking-mw
        image: booking-mw
        imagePullPolicy: Never
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1024Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-fe
spec:
  selector:
    matchLabels:
      app: booking-fe
  template:
    metadata:
      labels:
        app: booking-fe
    spec:
      containers:
      - name: booking-fe
        image: booking-fe
        imagePullPolicy: Never
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1024Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
