Kubernetes/booking-services.yml
apiVersion: v1
kind: Service
metadata:
  name: booking-postgres-db
spec:
  selector:
    app: booking-postgres-db
  ports:
    - name: http
      port: 5432
      nodePort: 30079
  type: NodePort

---

apiVersion: v1
kind: Service
metadata:
  name: booking-mw
spec:
  selector:
    app: booking-mw
  ports:
    - name: http
      port: 8080
      nodePort: 30080
  type: NodePort
