Kubernetes/booking-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booking-ingress
  labels:
    name: booking-ingress
spec:
  rules:
  - host: booking-app.test
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: booking-fe
            port: 
              number: 80
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: booking-mw
            port:
              number: 8080
